added same logic for assets to prevent same problem with them